<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="item1"
        android:id="@+id/id_1"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="15dp"
        android:textColor="#0a0909"
        android:textSize="25sp"
        android:background="@drawable/boder">

    </TextView>

</LinearLayout>