<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/item_detail"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_margin="16dp"
        tools:context=".ItemDetailFragment" />

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exo_player"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone"></com.google.android.exoplayer2.ui.SimpleExoPlayerView>
</LinearLayout>